--- a/styles/main.css
+++ b/styles/main.css
@@ -555,7 +555,7 @@ figure {
 
 .deck__img {
   margin-right: 3px;
-  width: 100px;
+  width: min(100px, calc((90vw - 36px) / 12));
 }
 
 .deck-container .deck__item {
